# gw_ros

./: .gitmodules  CMakeLists.txt  requirements.txt
.github/workflows/: main.yaml
config/: config.yaml
launch/: skyway.launch
scripts/: error.py  main.py
scripts/domain/common/: model.py
scripts/domain/data/: interface.py  model.py
scripts/domain/peer/: interface.py  model.py
scripts/helper/: injector.py  methods.py  multi_queue.py  queue_generator.py
scripts/infra/: rest.py
scripts/infra/data/: api.py
scripts/infra/peer/: api.py
scripts/presentation/: ros_pub_sub.py  service.py
scripts/usecase/: common.py  router.py  user_message.py
scripts/usecase/data/: close_data_socket_request.py  connect_flow.py  connect_request.py  disconnect_request.py  open_data_socket_request.py  redirect_flow.py  redirect_request.py  router.py  status_request.py  subscribe_events.py
scripts/usecase/peer/: create_request.py  delete_request.py  status_request.py  subscribe_events.py
srv/: SkyWayControls.srv  SkyWayEvents.srv
test/: mytest.test
test/domain/data/: test_data_model.py
test/domain/peer/: test_peer_model.py
test/helper/: test_generator.py  test_helper_methods.py  test_multi_queue.py
test/infra/: test_infra_rest.py
test/infra/data/: runner.test  test_infra_data_api.py
test/infra/peer/: test_infra_peer_api.py  test_infra_peer_api.test
test/usecase/data/: runner.test  test_close_socket_request.py  test_close_socket_request.test  test_connect_flow.py  test_open_socket_request.py  test_open_socket_request.test  test_redirect_flow.py  (+1 more)
(+15 files in other folders)
